[project]
name = "jupyter-tutorial"
version = "24.1.0"
authors = [
  { name="Veit Schiele", email="veit@cusy.io" },
]
description = "Training materials for setting up and using a research infrastructure based on Jupyter notebooks: https://cusy.io/en/seminars"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
docs = [
    "sphinx<8.2",
    "furo",
    "ipython",
    "ipywidgets",
    "nbsphinx",
    "sphinxext.opengraph", # matplotlib is required for social cards
    "matplotlib",
    "sphinx_copybutton",
    "sphinx-inline-tabs",
    "sphinxcontrib-svg2pdfconverter",
    "sphinx-lint",
]

dev = [
    "jupyter-tutorial[docs]",
    "pre-commit",
    "codespell",
    "vale",
]

[project.urls]
"Homepage" = "https://github.com/veit/jupyter-tutorial/"
"Bug Tracker" = "https://github.com/veit/jupyter-tutorial/issues"

[tool.setuptools]
packages = []

[tool.black]
line-length = 79

[tool.isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
not_skip="__init__.py"
use_parentheses=true

known_first_party="jupyter-tutorial-de"
known_third_party=["Cython", "accounts_pb2", "accounts_pb2_grpc", "dataprep", "google", "grpc", "mpi4py", "numpy", "pandas", "pydantic", "pytest", "requests", "setuptools"]

[tool.codespell]
skip = "*.html, *.ipynb"
